# eu-forest-biomass-tradeoff-explorer

./: .gitignore  AUDIT_REPORT.md  README.md  UPGRADE_PLAN.md  pyproject.toml
data/processed/: best_scenario_map_data.geojson  country_baseline_metrics.csv  nuts2_integrated_policy_map_data.geojson  (+8 more)
docs/: DATA_PROVENANCE.md  REPRODUCIBILITY.md  RESULTS_VALIDATION.md  assumptions.md  chalmers_application_brief.html  chalmers_application_brief.md  chalmers_cv_version.md  chalmers_figure_selection.md  chalmers_personal_letter_draft.md  chalmers_research_note.md  limitations.md  methods_note.md  parameter_grounding_note.md  portfolio_translation.md  self_audit.md  short_research_report.md
figures/: FIGURE_QA_REPORT.md
notebooks/: 01_country_tradeoffs.ipynb
outputs/: best_scenario_by_country.csv  consistency_audit.md  country_ranking_table.csv  nuts2_integrated_policy_options.csv  nuts2_integrated_policy_priorities.csv  nuts2_integrated_policy_summary.csv  nuts2_optimized_constraint_summary.csv  nuts2_optimized_policy_portfolio.csv  nuts2_optimized_policy_summary.csv  nuts2_optimized_policy_switches.csv  nuts2_policy_switch_regions.csv  nuts2_top_regions_table.csv  run_manifest.json  scenario_results_by_country.csv  scenario_summary_eu.csv  sensitivity_country_modal_scenario.csv  sensitivity_country_robustness.csv  sensitivity_eu_best_frequency.csv  sensitivity_eu_uncertainty_summary.csv  sensitivity_parameter_draws.csv  sweden_nuts2_empirical_best_scenarios.csv  sweden_nuts2_empirical_scenario_results.csv  sweden_nuts2_screening_comparison.csv
tests/: test_model.py
(+13 files in other folders)
